[package]
name = "lockdiff"
version = "1.1.4"
description = "Display more readable diffs for lock files"
edition = "2021"
license = "BSD-3-Clause"
readme = "README.md"
repository = "https://github.com/your-tools/lockdiff"


[dependencies]
anyhow = "1.0.58"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.108"
toml = "0.5.9"
yarn-lock-parser = "0.6.0"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.11.0"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = ["npm"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-unknown-linux-musl", "x86_64-pc-windows-msvc"]
# Publish jobs to run in CI
pr-run-mode = "plan"
# The archive format to use for windows builds (defaults .zip)
windows-archive = ".tar.gz"
# The archive format to use for non-windows builds (defaults .tar.xz)
unix-archive = ".tar.gz"
