[package]
name = "lockdiff"
version = "2.0.1"
description = "Display more readable diffs for lock files"
edition = "2021"
license = "BSD-3-Clause"
readme = "README.md"
repository = "https://github.com/your-tools/lockdiff"


[dependencies]
anyhow = "1.0.58"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.108"
serde_yml = "0.0.12"
toml = "0.5.9"
yarn-lock-parser = "0.11"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
